syntax="proto3";

package greet;
option go_package="calcproto";

message Sum {
    int32 first_num=1 ;
    int32 second_num=2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}


service SumService {

    rpc Sum(SumRequest) returns (SumResponse) {};
}